# checkpoint-in-k8s

./: .gitignore  Dockerfile  README.md  go.mod  main.go
checkpoint-spawner/: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
checkpoint-spawner/deploy/: config.yaml
checkpoint-spawner/src/checkpoint-spawner/: __init__.py  spawner.py
checkpointer/: .dockerignore  Dockerfile  README.md  go.mod  go.sum
checkpointer/cmd/checkpointer/: main.go
checkpointer/internal/: archiver.go  archiver_test.go  build_context.go  build_context_test.go  checkpointer.go  kubelet.go  kubelet_test.go  pod_controller.go  pod_controller_v2.go  template.go  template_test.go
checkpointer/internal/templates/: dockerfile.tmpl
checkpointer/k8s-manifests/: configmap.yaml  deamonset.yaml  dockerconfig-secret.yaml  kubelet-tls-secret.yaml  rbac.yaml  service.yaml
checkpointer/pkg/checkpoint/: checkpoint.go  kaniko_fs_checkpointer.go  kaniko_stdin_checkpointer.go
checkpointer/pkg/checkpointer/: checkpoint.go  kaniko_fs_checkpointer.go  kaniko_stdin_checkpointer.go
checkpointer/pkg/config/: config.go
checkpointer/pkg/manager/: default_manager.go  default_manager_test.go  manager.go  storage.go  storage_test.go
checkpointer/web/: checkpoint.go  router_proxy.go
deploy/: config.yaml
etc/: runc.conf
k8s-manifests/: configmap.yaml  deamonset.yaml  dockerconfigsecret.yaml  kubelet-tls-secret.yaml  rbac.yaml  secret.yaml  service.yaml
scripts/: build-push-base.sh  k8s-install-control.sh  k8s-install-node.sh
timer/: Dockerfile  README.md  timer.go
