[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "checkpoint-spawner"
version = "1.0.0"
authors = [
  { name="Pavol Baran", email="492953@mail.muni.cz" },
]
description = "JupyterHub Spawner built on KubeSpawner, utilizing checkpoint/restore functionality in Kubernetes."
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/xbaran4/checkpoint-in-k8s"

[tool.hatch.build.targets.wheel]
packages = ["src/checkpoint-spawner"]
